bitbybit-tests/tests/ui/ranges_attribute_one_range.stderr
error: custom attribute panicked
 --> tests/ui/ranges_attribute_one_range.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: `ranges` attribute for RangeVariant1 has only one range; use `range`
